# micrite

./: .gitignore  Cargo.toml  README.md
inst/: common_taxids.csv  readme.md  readme.txt
outdir/: humanGRCh38_9000_ebv_1000_hpv16_1000_hpylori_1000.grch38_noalt.bam_summary.txt  humanGRCh38_9000_ebv_1000_hpv16_1000_hpylori_1000.grch38_noalt.classified  humanGRCh38_9000_ebv_1000_hpv16_1000_hpylori_1000.grch38_noalt.fasta  humanGRCh38_9000_ebv_1000_hpv16_1000_hpylori_1000.grch38_noalt.kout.tsv  humanGRCh38_9000_ebv_1000_hpv16_1000_hpylori_1000.grch38_noalt.krakenhits.csv  humanGRCh38_9000_ebv_1000_hpv16_1000_hpylori_1000.grch38_noalt.kreport  humanGRCh38_9000_ebv_1000_hpv16_1000_hpylori_1000.grch38_noalt.output.tsv  humanGRCh38_9000_ebv_1000_hpv16_1000_hpylori_1000.grch38_noalt.unclassified
src/: bam.rs  hostdepletion.rs  kraken.rs  lib.rs  main.rs
testfiles/: alignment.sh  humanGRCh38_9000_ebv_1000_hpv16_1000_hpylori_1000.grch38_noalt.bam  humanGRCh38_9000_ebv_1000_hpv16_1000_hpylori_1000.grch38_noalt.bam.bai  humanGRCh38_9000_ebv_1000_hpv16_1000_hpylori_1000.grch38_noalt.bam.idxstats.txt
testfiles/database/krakendb/: opts.k2d  taxo.k2d
